# news_aggregator

./: .gitignore  README.md  pyproject.toml  rss_feeds.json
_demo/: 2024-09-07 12-29-04.mkv
src/news_parser/: __init__.py  app.py  newsletter.py
src/news_parser/templates/: article.html  index.html
src/news_parser/utils/: emails.py  helper.py
