[project]
name = "news-parser"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# to specify virtual environment location (for Zed)
[tool.pyright]
venvPath = "."
venv = "venv"
